--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
     <div class="mainScreen">
-
+        <div class="gameTextTitle">
+            <div class="gameMainTitle">가위 바위 보</div>
+            <div class="gameSubTitle">컴퓨터와 가위 바위 보를 해보세요!</div>
+        </div>
+        <div class="RockSissorsPaper">✌️✊🖐</div>
+        <div class="gameExplain">
+            게임 설명
+            <br>컴퓨터와 가위 바위 보를 진행합니다.
+            <br>먼저 5점을 달성하면 승리합니다.
+        </div>
+        <button type="button" class="gameStartButton" onClick="location.href='game.html'">게임 시작</button>
     </div>
 </body>
 </html>
