#Temp Temporary save

--- a/game.html
+++ b/game.html
@@ -20,6 +20,13 @@
                 <div class="computerInfoCount">0</div>
             </div>
         </div>
+        <div class="computerResult"></div>
+        <div class="userSet">
+            <button type="button">✌️</button>
+            <button type="button">✊</button>
+            <button type="button">🖐</button>
+        </div>
     </div>
 </body>
+<script src="index.js"></script>
 </html>
