--- a/game.html
+++ b/game.html
@@ -22,10 +22,11 @@
         </div>
         <div class="computerResult"></div>
         <div class="userSet">
-            <button type="button">✌️</button>
-            <button type="button">✊</button>
-            <button type="button">🖐</button>
+            <button class="gameUserButton userSissorsButton" type="button">✌️</button>
+            <button class="gameUserButton userRockButton" type="button">✊</button>
+            <button class="gameUserButton userPaperButton" type="button">🖐</button>
         </div>
+        <div class="currentGameResult">가위바위보를 진행해주세요!<br>결과창:비겼습니다! 이겼습니다! 졌습니다! 바로 뜰 공간</div>
     </div>
 </body>
 <script src="index.js"></script>
