#Temp Save temporary click event proceeding :D

--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
                 <div class="computerInfoCount">0</div>
             </div>
         </div>
-        <div class="computerResult"></div>
+        <div class="computerResult">✌️</div>
         <div class="userSet">
             <button class="gameUserButton userSissorsButton" type="button">✌️</button>
             <button class="gameUserButton userRockButton" type="button">✊</button>
