#Complete / + 추가적으로 이벤트 더 추가하면 좋을거 같긴함

--- a/game.html
+++ b/game.html
@@ -26,7 +26,8 @@
             <button class="gameUserButton userRockButton" type="button">✊</button>
             <button class="gameUserButton userPaperButton" type="button">🖐</button>
         </div>
-        <div class="currentGameResult">가위바위보를 진행해주세요!<br>결과창:비겼습니다! 이겼습니다! 졌습니다! 바로 뜰 공간</div>
+        <div class="currentGameResult">가위바위보를 진행해주세요!</div>
+        <button onClick="window.location.reload()" class="regame">다시하기</button>
     </div>
 </body>
 <script src="index.js"></script>
