--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <!-- 파비콘 들어가는 자리 -->
+    <link rel="icon" href="mainfav.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>가위 바위 보</title>
 </head>
